[package]
name = "san_wrapper"
description = "A simple rclone wrapper to make easy sync files between local and remote recusively."
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0.1"
notify = "5.1.0"
serde = { version = "1.0", features = ["derive"] }
toml_edit = "0.19.8"
